# assistant

./: .env  .env.example  .replit  design_guidelines.md  init_db.py  pyproject.toml  replit.md  run_backend.sh
.local/state/replit/agent/: progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
backend/: README.md  celery_app.py  config.py  database.py  main.py
backend/models/: __init__.py  ltm.py  preference.py  stm.py  task.py
backend/routers/: activity.py  chat.py  preferences.py  settings.py  tasks.py
backend/schemas/: __init__.py  chat.py  preference.py  task.py
backend/services/: ai_service.py  memory_service.py  task_service.py
backend/tasks/: __init__.py
backend/utils/: tool_integrations.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: activity-item.tsx  ai-tool-card.tsx  app-sidebar.tsx  chat-input.tsx  chat-message.tsx  integration-card.tsx  preference-section.tsx  quick-action-card.tsx  task-card.tsx  task-dialog.tsx
client/src/components/examples/: ChatMessage.tsx  IntegrationCard.tsx  PreferenceSection.tsx  QuickActionCard.tsx  TaskCard.tsx
client/src/lib/: apiClient.ts  theme-provider.tsx  websocket.ts
client/src/pages/: chat.tsx  home.tsx  personalization.tsx  settings.tsx  tasks.tsx
shared/: schema.ts
