[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "anthropic>=0.69.0",
    "celery>=5.5.3",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "openai>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
    "websockets>=15.0.1",
]
